@@ -1086,6 +1086,7 @@ typedef struct CompletionEntry {
 
 void register_completion(const char *name, CompletionFunc completion_func);
 void put_status(EditState *s, const char *fmt, ...);
+void put_error(EditState *s, const char *fmt, ...);
 void minibuffer_edit(const char *input, const char *prompt, 
                      StringArray *hist, CompletionFunc completion_func,
                      void (*cb)(void *opaque, char *buf), void *opaque);
